syntax = "proto2";

message ProofReq {
	required bytes uid = 1;
	required bytes unonce = 2;
	required int64 seqid = 3;
	required bytes vid = 4;
	required bytes sig = 5;
}

message ProofResp {
	required bytes uid = 1;
	required bytes unonce = 2;
	required bytes sig = 3;
}

message VaultMsg {
	message Vault {
		message Point {
			required uint32 x = 1;
			required uint32 y = 2;
		}
		repeated Point points = 1;
	}
	required Vault vault = 1;
	required bytes uid = 2;
	required bytes unonce = 3;
	required bytes apid = 4;
	required bytes apnonce = 5;
	required fixed64 time = 6;
	required bytes sig = 7;
}

message LocnProof {
	required bytes vault_key = 1;
	required bytes uid = 2;
	required bytes unonce = 3;
	required bytes apid = 4;
	required bytes apnonce = 5;
	required fixed64 time = 6;
	required bytes sig = 7;
}

message Token {
	required bytes vnonce = 1;
	required bytes locn_tag = 2;
}
